# openprotein-python

./: .gitignore  02_PoET_api_AMIE_analysis.ipynb  02_PoET_api_AMIE_substitution_deletion_analysis.ipynb  04_GPopt_library_design_comparison_cost_analysis.ipynb  CHANGELOG.md  LICENSE.txt  Makefile  README.md  _sidebar.yml  dprint.json  embedding_api_antibody_getting_start.ipynb  flake.nix  meta.yaml  mise.dev.toml  mise.toml  pyproject.toml  pytest.ini  release-please-config.json  test_environment.yml
.github/workflows/: release-publish.yml  release.yaml  release_conda.yaml  release_pypi.yaml  s3.yaml  s3docs.yaml
_site/: core_demo.html  embeddings_demo.html  index.html  poet_demo.html  search.json
_site/docsold/: overview.html
_site/reference/: api.data.AssayDataset.html  api.data.DataAPI.html  api.data.html  api.design.DesignAPI.html  api.design.DesignFuture.html  api.embedding.EmbeddingAPI.html  api.embedding.EmbeddingResultFuture.html  api.embedding.ProtembedModel.html  api.embedding.SVDModel.html  api.poet.MSAFuture.html  api.poet.PoetAPI.html  api.poet.PoetGenerateFuture.html  api.poet.PoetScoreFuture.html  api.poet.PoetSingleSiteFuture.html  api.poet.PromptFuture.html  api.predict.PredictAPI.html  api.predict.PredictFuture.html  api.train.TrainFuture.html  api.train.TrainingAPI.html  base.APISession.html  get_object.html  preview.html
anaconda_build/: conda_build_config.yaml  meta.yaml
apidocs/source/: Tutorials.rst  align.rst  basics.rst  conf.py  core_workflow.rst  embedding.rst  embedding_workflow.rst  fold.rst  index.rst  installation.rst  overview.rst  poet.rst  poet_workflow.rst  predict.rst  train.rst
docsold/: conf.py  data.rst  modules.rst  overview.md  poet.rst
newdocs/source/: predict.rst
openprotein/: __init__.py  _version.py  api.py  auth_store.py  base.py  chains.py  config.py  csv.py  errors.py  fasta.py  futures.py  jobs.py  models.py  protein.py  pydantic.py  scaffolds.py  schemas.py
openprotein/align/: __init__.py  align.py  api.py  future.py  msa.py  schemas.py
openprotein/api/: __init__.py  align.py  assaydata.py  data.py  design.py  designer.py  embedding.py  errors.py  fold.py  job.py  jobs.py  models.py  poet.py  predict.py  predictor.py  prompt.py  prots2prot.py  svd.py  train.py  umap.py
openprotein/app/: __init__.py  deprecated.py
openprotein/clustering/: __init__.py  api.py  clustering.py  models.py  schemas.py
openprotein/common/: __init__.py  features.py  model_metadata.py  reduction.py  residue_contants.py
openprotein/data/: __init__.py  api.py  assaydataset.py  data.py  schemas.py
openprotein/design/: __init__.py  api.py  design.py  future.py  schemas.py
openprotein/embeddings/: __init__.py  ablang.py  api.py  embeddings.py  esm.py  future.py  models.py  openprotein.py  poet.py  poet2.py  schemas.py
openprotein/fold/: __init__.py  alphafold2.py  api.py  boltz.py  common.py  complex.py  esmfold.py  esmfold2.py  fold.py  future.py  minifold.py  models.py  protenix.py  rosettafold3.py  schemas.py
openprotein/jobs/: __init__.py  api.py  futures.py  jobs.py  schemas.py
openprotein/models/: __init__.py  base.py  models.py  structure_generation.py
openprotein/molecules/: __init__.py  chains.py  complex.py  protein.py  structure.py  template.py
openprotein/predictor/: __init__.py  api.py  models.py  prediction.py  predictor.py  schemas.py  validate.py
openprotein/prompt/: __init__.py  api.py  models.py  prompt.py  schemas.py
openprotein/schemas/: __init__.py  align.py  design.py  designer.py  embeddings.py  fold.py  job.py  predict.py  predictor.py  prompt.py  svd.py  train.py  umap.py
openprotein/svd/: __init__.py  api.py  models.py  schemas.py  svd.py
openprotein/umap/: __init__.py  api.py  models.py  schemas.py  umap.py
openprotein/utils/: chain_id.py  cif.py  numpy.py  sequence.py  uuid.py
openprotein_python/: __init__.py  _version.py  base.py  models.py
openprotein_python/api/: __init__.py  data.py  design.py  embedding.py  jobs.py  poet.py  predict.py  train.py
quarto_docs/: _quarto.yml  objects.json
quarto_docs/_site/: search.json
quarto_docs/reference/: api.data.DataAPI.qmd  api.embedding.ProtembedModel.qmd  api.poet.MSAFuture.qmd  api.poet.PoetAPI.qmd  api.poet.PoetSingleSiteFuture.qmd  api.train.TrainFuture.qmd  base.APISession.qmd
recipe/: meta.yaml
reference/: api.data.AssayDataset.qmd  api.data.qmd  api.design.DesignAPI.qmd  api.design.DesignFuture.qmd  api.embedding.EmbeddingAPI.qmd  api.embedding.EmbeddingResultFuture.qmd  api.embedding.SVDModel.qmd  api.poet.PoetGenerateFuture.qmd  api.poet.PoetScoreFuture.qmd  api.poet.PromptFuture.qmd  api.predict.PredictAPI.qmd  api.predict.PredictFuture.qmd  api.train.TrainingAPI.qmd  get_object.qmd  index.qmd
scripts/: probe_dtypes.py
sphinx/source/: train.rst
sphinx_docs/source/: embedding.rst  index.rst
tests/: conf.py  conftest.py  context.py  test_assay.py  test_auth.py  test_base.py  test_embeddings.py  test_embeddings_e2e.py  test_poet.py  test_predict.py  test_train.py
tests/align/: test_align.py  test_align_api.py  test_align_msa.py  test_align_schemas.py
tests/api/: test_assay.py  test_base.py  test_design.py  test_embeddings.py  test_poet.py  test_predict.py  test_train.py
tests/clustering/: test_clustering.py  test_clustering_api.py  test_clustering_models.py  test_clustering_schemas.py
tests/data/: 1A3N.cif  1MSW.cif  1PFE.cif  8bo9.cif  9bkq-assembly2.cif  AMIE_PSEAE_Whitehead.wide.1000.csv  AMIE_PSEAE_Whitehead.wide.15.csv  AMIE_PSEAE_Whitehead.wide.csv  boltzgen_entity_one_letter_missing_residues.cif  test_data.py  test_data_api.py  test_data_schemas.py  test_protein.cif
tests/design/: test_design.py  test_design_api.py  test_design_future.py  test_design_schemas.py
tests/e2e/: README.md  config.py  conftest.py  test_align_e2e.py  test_assaydata_e2e.py  test_clustering_e2e.py  test_core_e2e.py  test_design_e2e.py  test_embeddings_e2e.py  test_fold_e2e.py  (+7 more)
(+212 files in other folders)
