[project]
name = "openprotein_python"
packages = [{ include = "openprotein" }]
version = "0.5.2"
description = "OpenProtein Python interface."
license = "MIT"
readme = "README.md"
homepage = "https://docs.openprotein.ai/"
authors = [{ name = "Mark Gee", email = "markgee@ne47.bio" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "requests>=2.32.3,<3",
  "pydantic>=2.5,<3",
  "tqdm>=4.66.5,<5",
  "pandas>=2.2.2,<3",
  "numpy>=1.9,<3",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29.5,<7",
  "pytest>=8.3.3,<9",
  "pandas-stubs>=2.1.4.240909,<3",
  "matplotlib>=3.9.2,<4",
  "scipy>=1.14.1,<2",
  "hatchling>=1.26.1",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "linux-aarch64", "osx-arm64"]

[tool.pixi.dependencies]
python = ">=3.10"

# allow installing as editable
[tool.pixi.feature.dev.dependencies]
pip = ">=24.2,<25"

[tool.pixi.feature.dev.tasks]
postinstall = "pip install --no-build-isolation --no-deps --disable-pip-version-check -e ."

[tool.pixi.environments]
dev = ["dev"]

[build-system]
requires = ["hatchling>=1.26.1"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["openprotein"]

[tool.hatch.build.targets.wheel]
packages = ["openprotein"]

[tool.hatch.env]
requires = [
  "hatch-conda>=0.5.2",
]

[tool.hatch.envs.conda]
type = "conda"
command = "micromamba"
dependencies = [
  "conda-build>=24.9.0",
]
requires = [
  "hatch-conda-build",
]

[tool.pyright]
typeCheckingMode = "basic"
